[package]
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Windowing System and Compositor"
license-file = "LICENSE"
name = "orbital"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/orbital"
version = "0.1.0"
edition = "2024"

[dependencies]
drm = "0.15"
graphics-ipc = { git = "https://gitlab.redox-os.org/Ibuki.O/base.git", branch = "avoid-blocking-nsmgr" }
inputd = { git = "https://gitlab.redox-os.org/Ibuki.O/base.git", branch = "avoid-blocking-nsmgr" }
libc = "0.2.48"
log = "0.4.14"
orbclient = { git = "https://gitlab.redox-os.org/Ibuki.O/orbclient.git", branch = "update-libredox", features = ["image"] }
orbfont = "0.4"
redox-log = { git = "https://gitlab.redox-os.org/redox-os/redox-log.git" }
redox_syscall = { git = "https://gitlab.redox-os.org/Ibuki.O/syscall.git", branch = "remove-fd-allocation",  features = ["std"] }
redox-scheme = { git = "https://gitlab.redox-os.org/Ibuki.O/redox-scheme.git", branch = "libredox-socket-create_inner" }
libredox = { git = "https://gitlab.redox-os.org/Ibuki.O/libredox.git", branch = "fcntl" }
plain = "0.2"
serde = "1"
serde_derive = "1"
thiserror = "2.0.12"
toml = "0.7"
# Downgrade due to improper x86 CPU feature detection
ab_glyph_rasterizer = "=0.1.5"
redox_event = { git = "https://gitlab.redox-os.org/Ibuki.O/event.git", branch = "update-redox-crates" }

[patch.crates-io]
redox-log = { git = "https://gitlab.redox-os.org/redox-os/redox-log.git" }
orbclient = { git = "https://gitlab.redox-os.org/Ibuki.O/orbclient.git", branch = "update-libredox" }

[patch."https://gitlab.redox-os.org/redox-os/base.git"]
#graphics-ipc = { path = "../../../core/base/source/drivers/graphics/graphics-ipc" }
#inputd = { path = "../../../core/base/source/drivers/inputd" }
