[package]
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Windowing System and Compositor"
name = "orbital-core"
repository = "https://github.com/redox-os/orbital"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
libc = "0.2.48"
orbclient = "0.3"
orbimage = "0.1"
redox_syscall = { git = "https://gitlab.redox-os.org/redox-os/syscall", rev = "4115e0f43547449ce56f7d7749732813e9505955" }

[dependencies.redox_event]
git = "https://github.com/redox-os/event.git"
