[package]
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Windowing System and Compositor"
name = "orbital-core"
repository = "https://github.com/redox-os/orbital"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
libc = "0.2.48"
orbclient = "0.3"
orbimage = "0.1"
redox_syscall = "0.2.12"

[dependencies.redox_event]
git = "https://gitlab.redox-os.org/redox-os/event.git"
rev = "228eb071"
